# pybelief

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  requirements.txt  usage.rst
example/: combine_multiple_demo.py  zadeh_paradox.py
pybelief/: __init__.py
pybelief/core/: __init__.py  belief_mass.py
pybelief/fusion/: __init__.py  dempster.py  pcr.py
tests/: test_logic.py
